--- a/power/package.json
+++ b/power/package.json
@@ -15,24 +15,24 @@
     },
     "private": true,
     "dependencies": {
-        "@angular-devkit/core": "^10.0.8",
-        "@angular-devkit/schematics": "^10.0.8",
-        "@angular/animations": "^10.0.14",
-        "@angular/cdk": "^10.1.3",
-        "@angular/common": "^10.0.14",
-        "@angular/compiler": "^10.0.14",
-        "@angular/core": "^10.0.14",
-        "@angular/forms": "^10.0.14",
-        "@angular/localize": "^10.0.14",
-        "@angular/platform-browser": "^10.0.14",
-        "@angular/platform-browser-dynamic": "^10.0.14",
-        "@angular/router": "^10.0.14",
-        "@angular/service-worker": "^10.0.14",
+        "@angular-devkit/core": "^10.1.0",
+        "@angular-devkit/schematics": "^10.1.0",
+        "@angular/animations": "^10.1.0",
+        "@angular/cdk": "^10.2.0",
+        "@angular/common": "^10.1.0",
+        "@angular/compiler": "^10.1.0",
+        "@angular/core": "^10.1.0",
+        "@angular/forms": "^10.1.0",
+        "@angular/localize": "^10.1.0",
+        "@angular/platform-browser": "^10.1.0",
+        "@angular/platform-browser-dynamic": "^10.1.0",
+        "@angular/router": "^10.1.0",
+        "@angular/service-worker": "^10.1.0",
         "@ng-bootstrap/ng-bootstrap": "^7.0.0",
         "@types/geojson": "^7946.0.7",
         "angular-resize-event": "^1.2.2",
         "bootstrap": "^4.5.2",
-        "bootstrap-icons": "^1.0.0-alpha5",
+        "bootstrap-icons": "^1.0.0",
         "classlist.js": "^1.1.20150312",
         "core-js": "^3.6.5",
         "echarts": "^4.9.0",
@@ -41,7 +41,7 @@
         "hyphen": "^1.6.2",
         "knockout": "^3.5.1",
         "mapbox-gl": "^1.12.0",
-        "ngx-bootstrap": "^5.6.1",
+        "ngx-bootstrap": "^5.6.2",
         "ngx-bootstrap-icons": "^0.0.26",
         "ngx-echarts": "^4.2.2",
         "ngx-mapbox-gl": "^4.8.1",
@@ -52,35 +52,35 @@
         "rxjs": "^6.6.2",
         "rxjs-compat": "^6.6.2",
         "showdown": "^1.9.1",
-        "survey-angular": "^1.7.28",
-        "surveyjs-widgets": "^1.7.28",
+        "survey-angular": "^1.8.0",
+        "surveyjs-widgets": "^1.8.0",
         "tslib": "^2.0.1",
         "web-animations-js": "^2.3.2",
         "zone.js": "^0.10.3"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.1000.8",
-        "@angular/cli": "^10.0.8",
-        "@angular/compiler-cli": "^10.0.14",
-        "@angular/language-service": "^10.0.14",
+        "@angular/cli": "^10.1.0",
+        "@angular/compiler-cli": "^10.1.0",
+        "@angular/language-service": "^10.1.0",
         "@types/jasmine": "^3.5.14",
         "@types/jasminewd2": "^2.0.8",
         "@types/mapbox-gl": "^1.11.2",
-        "@types/node": "^14.6.1",
+        "@types/node": "^14.6.3",
         "@types/showdown": "^1.9.3",
         "codelyzer": "^6.0.0",
         "html-validate": "^3.2.0",
         "jasmine-core": "^3.6.0",
         "jasmine-reporters": "^2.3.2",
         "jasmine-spec-reporter": "^5.0.0",
-        "karma": "^5.1.1",
+        "karma": "^5.2.1",
         "karma-chrome-launcher": "^3.1.0",
         "karma-coverage-istanbul-reporter": "^3.0.2",
         "karma-jasmine": "^3.3.0",
         "karma-jasmine-html-reporter": "^1.5.0",
         "karma-junit-reporter": "^2.0.1",
         "protractor": "^7.0.0",
-        "stylelint": "^13.6.1",
+        "stylelint": "^13.7.0",
         "stylelint-config-standard": "^20.0.0",
         "ts-node": "^8.10.2",
         "tslint": "^6.1.3",
