--- a/power/package.json
+++ b/power/package.json
@@ -81,7 +81,9 @@
         "eslint": "^7.15.0",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jsdoc": "^30.7.8",
+        "eslint-plugin-no-unsanitized": "^3.1.4",
         "eslint-plugin-prefer-arrow": "^1.2.2",
+        "eslint-plugin-scanjs-rules": "^0.2.1",
         "eslint-plugin-security": "^1.4.0",
         "html-validate": "^4.1.0",
         "jasmine-core": "^3.6.0",
