--- a/power/package.json
+++ b/power/package.json
@@ -60,11 +60,11 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.1100.6",
-        "@angular-eslint/builder": "^0.8.0-beta.7",
-        "@angular-eslint/eslint-plugin": "^0.8.0-beta.7",
-        "@angular-eslint/eslint-plugin-template": "^0.8.0-beta.7",
-        "@angular-eslint/schematics": "^0.8.0-beta.7",
-        "@angular-eslint/template-parser": "^0.8.0-beta.7",
+        "@angular-eslint/builder": "^1.0.0",
+        "@angular-eslint/eslint-plugin": "^1.0.0",
+        "@angular-eslint/eslint-plugin-template": "^1.0.0",
+        "@angular-eslint/schematics": "^1.0.0",
+        "@angular-eslint/template-parser": "^1.0.0",
         "@angular/cli": "^11.0.6",
         "@angular/compiler-cli": "^11.0.7",
         "@angular/language-service": "^11.0.7",
@@ -80,7 +80,7 @@
         "codelyzer": "^6.0.1",
         "eslint": "^7.17.0",
         "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jsdoc": "^30.7.13",
+        "eslint-plugin-jsdoc": "^31.0.2",
         "eslint-plugin-no-unsanitized": "^3.1.4",
         "eslint-plugin-prefer-arrow": "^1.2.2",
         "eslint-plugin-scanjs-rules": "^0.2.1",
