--- a/power/ngsw-config.json
+++ b/power/ngsw-config.json
@@ -8,8 +8,10 @@
                 "files": [
                     "/favicon.ico",
                     "/index.html",
+                    "/manifest.json",
                     "/*.css",
-                    "/*.js"
+                    "/*.js",
+                    "!/ngsw.json"
                 ]
             }
         },
@@ -20,10 +22,24 @@
             "resources": {
                 "files": [
                     "/assets/**",
-                    "!/assets/config/config.json",
-                    "/mvt/**"
+                    "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)",
+                    "/mvt/**",
+                    "!/assets/config/config.json"
                 ]
             }
         }
-    ]
+    ],
+    "navigationUrls": [
+        "/**",
+        "!/**/*.*",
+        "!/**/*__*",
+        "!/**/*__*/**",
+        "!/health",
+        "!/geocoding/suggestions/**",
+        "!/geocoding/geosearch/**",
+        "!/wfs/alkis/**",
+        "!/feedback-rss/**",
+        "!/boris-print/**"
+    ],
+    "navigationRequestStrategy": "freshness"
 }
