--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -119,7 +119,7 @@ test:lint:
     - production
   allow_failure: true
 
-test:lint:html:
+test:lint-html:
   stage: test
   image: node:lts-alpine
   dependencies: []
@@ -136,7 +136,7 @@ test:lint:html:
     - staging
     - production
 
-test:lint:styles:
+test:lint-styles:
   stage: test
   image: node:lts-alpine
   dependencies: []
@@ -152,6 +152,33 @@ test:lint:styles:
     - dev
     - staging
     - production
+
+test:helm-dry-run:
+  stage: test
+  image: dtzar/helm-kubectl:latest
+  dependencies: []
+  cache: {}
+  script:
+    - kubectl config set-cluster k8s --server="$KUBE_API_URL" --insecure-skip-tls-verify=true
+    - kubectl config set-credentials "$KUBE_DEPLOY_SECRET_NAME" --token="$KUBE_API_TOKEN"
+    - kubectl config set-context default --cluster=k8s --user="$KUBE_DEPLOY_SECRET_NAME"
+    - kubectl config use-context default
+    - helm upgrade power ./chart/power -n dev -f ./chart/power/values-dev.yaml --install --set=image.tag="$CI_COMMIT_SHORT_SHA" --dry-run
+  only:
+    - master
+
+test:helm-kubesec:
+  stage: test
+  image: dtzar/helm-kubectl:latest
+  dependencies: []
+  cache: {}
+  script:
+    - wget https://github.com/controlplaneio/kubesec/releases/download/v2.8.0/kubesec_linux_amd64.tar.gz
+    - tar xf kubesec_linux_amd64.tar.gz
+    - helm template power ./chart/power -f ./chart/power/values-dev.yaml | ./kubesec scan -
+  only:
+    - master
+  allow_failure: true
 
 build:
   stage: build
