--- a/power/package.json
+++ b/power/package.json
@@ -28,6 +28,7 @@
         "@angular/platform-browser-dynamic": "^11.0.9",
         "@angular/router": "^11.0.9",
         "@ng-bootstrap/ng-bootstrap": "^8.0.2",
+        "@turf/turf": "^6.2.0",
         "bootstrap": "^4.5.3",
         "bootstrap-icons": "^1.3.0",
         "classlist.js": "^1.1.20150312",
