--- a/power/package.json
+++ b/power/package.json
@@ -72,7 +72,7 @@
         "@types/jasmine": "^3.6.3",
         "@types/jasminewd2": "^2.0.8",
         "@types/lodash": "^4.14.168",
-        "@types/mapbox-gl": "1.12.7",
+        "@types/mapbox-gl": "^1.13.0",
         "@types/node": "^14.14.22",
         "@types/showdown": "^1.9.3",
         "@typescript-eslint/eslint-plugin": "^4.14.0",
@@ -99,6 +99,6 @@
         "stylelint": "^13.9.0",
         "stylelint-config-standard": "^20.0.0",
         "ts-node": "^9.1.1",
-        "typescript": "~4.0.5"
+        "typescript": "~4..5"
     }
 }
