--- a/power/package.json
+++ b/power/package.json
@@ -99,6 +99,6 @@
         "stylelint": "^13.9.0",
         "stylelint-config-standard": "^20.0.0",
         "ts-node": "^9.1.1",
-        "typescript": "~4..5"
+        "typescript": "~4.0.5"
     }
 }
