--- a/power/package.json
+++ b/power/package.json
@@ -27,7 +27,7 @@
         "@angular/platform-browser": "^11.1.0",
         "@angular/platform-browser-dynamic": "^11.1.0",
         "@angular/router": "^11.1.0",
-        "@ng-bootstrap/ng-bootstrap": "^9.0.0",
+        "@ng-bootstrap/ng-bootstrap": "^9.0.1",
         "@turf/turf": "^6.3.0",
         "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.3.0",
@@ -59,7 +59,8 @@
         "zone.js": "^0.11.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.1100.7",
+        "@angular-devkit/architect": "^0.1101.0",
+        "@angular-devkit/build-angular": "^0.1101.0",
         "@angular-eslint/builder": "^1.1.0",
         "@angular-eslint/eslint-plugin": "^1.1.0",
         "@angular-eslint/eslint-plugin-template": "^1.1.0",
@@ -94,6 +95,7 @@
         "karma-jasmine": "^4.0.1",
         "karma-jasmine-html-reporter": "^1.5.0",
         "karma-junit-reporter": "^2.0.1",
+        "postcss": "^8.2.4",
         "protractor": "^7.0.0",
         "resize-observer-polyfill": "^1.5.1",
         "stylelint": "^13.9.0",
