--- a/power/.stylelintrc.json
+++ b/power/.stylelintrc.json
@@ -22,6 +22,7 @@
                 ]
             }
         ],
-        "string-quotes": "single"
+        "string-quotes": "single",
+		"length-zero-no-unit": null
     }
 }
