--- a/chart/power/values-production.yaml
+++ b/chart/power/values-production.yaml
@@ -116,7 +116,11 @@ metrics:
   service:
     port: 9113
   resources:
-    limits: {}
-    requests: {}
+    limits:
+      cpu: 200m
+      memory: 256Mi
+    requests:
+      cpu: 20m
+      memory: 128Mi
   serviceMonitor:
     enabled: true
