--- a/chart/power/values-staging.yaml
+++ b/chart/power/values-staging.yaml
@@ -96,13 +96,17 @@ metrics:
   image:
     registry: docker.io
     repository: bitnami/nginx-exporter
-    tag: 0.8.0-debian-10-r259
+    tag: 0.8.0-debian-10-r247
     pullPolicy: IfNotPresent
   podAnnotations: {}
   service:
     port: 9113
   resources:
-    limits: {}
-    requests: {}
+    limits:
+      cpu: 200m
+      memory: 256Mi
+    requests:
+      cpu: 20m
+      memory: 128Mi
   serviceMonitor:
     enabled: true
