--- a/chart/power/power.conf
+++ b/chart/power/power.conf
@@ -23,12 +23,27 @@ server {
   add_header Permissions-Policy "geolocation=(self),camera=(),microphone=(),usb=(),payment=(),fullscreen=()" always;
   add_header X-Frame-Options "DENY" always;
   add_header X-XSS-Protection "1; mode=block" always;
+  keepalive_timeout 30;
+  send_timeout 30;
+  client_max_body_size 100K;
+  large_client_header_buffers 2 1k;
 
   # enable cache
   add_header Cache-Control 'public, must-revalidate, proxy-revalidate';
   add_header Pragma 'public';
   expires 30d;
   etag on;
+
+  # Deny all attempts to access hidden files such as .htaccess or .htpasswd
+  location ~ /\. {
+    deny all;
+    return 404;
+  }
+
+  # Deny all not needed http methods
+  if ($request_method !~ ^(GET|HEAD|POST|OPTIONS)$) {
+    return 444;
+  }
 
   location / {
     try_files $uri $uri/index.html $uri/ /index.html =404;
@@ -60,6 +75,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_hide_header Set-Cookie;
     proxy_hide_header Server;
+    proxy_hide_header X-Powered-By;
     proxy_hide_header Cache-Control;
     proxy_hide_header Pragma;
     proxy_hide_header expires;
@@ -91,6 +107,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_hide_header Set-Cookie;
     proxy_hide_header Server;
+    proxy_hide_header X-Powered-By;
     proxy_hide_header Cache-Control;
     proxy_hide_header Pragma;
     proxy_hide_header expires;
@@ -129,6 +146,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_hide_header Set-Cookie;
     proxy_hide_header Server;
+    proxy_hide_header X-Powered-By;
     proxy_hide_header Cache-Control;
     proxy_hide_header Pragma;
     proxy_hide_header expires;
